# crates-io-ops-bot

./: .env.sample  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Procfile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src/: app.ts  config.rs  heroku_command.rs  heroku_command.ts  lib.rs  main.rs  process_lines.test.ts  process_lines.ts  utilities.rs
src/authorizations/: users.rs
src/commands/: heroku.rs  math.rs  mod.rs  myid.rs  ping.rs
terraform_example/: README.md  example.tfvars  main.tf  terraform.tfstate  variables.tf
terraform_example/templates/: crates-io-ops-bot.json.tpl
test/: test.js
