[package]
name = "crates-io-ops-bot"
version = "0.1.0"
authors = ["Nell Shamrell <nellshamrell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
heroku_rs = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8"